k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8085
          - path: /history
            pathType: Prefix
            backend:
              service:
                name: history-service
                port:
                  number: 8084
          - path: /recommendation
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 8083
          - path: /subscription
            pathType: Prefix
            backend:
              service:
                name: subscription-service
                port:
                  number: 8082
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
